NIFI-15346 Fixed checkstyle and replaced get(0) calls with getFirst.