@@ -75,7 +75,7 @@ public class FetchBoxFileTest extends AbstractBoxFileTest {
 
         testRunner.assertAllFlowFilesTransferred(FetchBoxFile.REL_SUCCESS, 1);
         final List<MockFlowFile> flowFiles = testRunner.getFlowFilesForRelationship(FetchBoxFile.REL_SUCCESS);
-        final MockFlowFile ff0 = flowFiles.get(0);
+        final MockFlowFile ff0 = flowFiles.getFirst();
         assertOutFlowFileAttributes(ff0);
         verify(mockBoxFile).download(any(OutputStream.class));
         assertProvenanceEvent(ProvenanceEventType.FETCH);
@@ -96,14 +96,14 @@ public class FetchBoxFileTest extends AbstractBoxFileTest {
 
         testRunner.assertAllFlowFilesTransferred(FetchBoxFile.REL_SUCCESS, 1);
         final List<MockFlowFile> flowFiles = testRunner.getFlowFilesForRelationship(FetchBoxFile.REL_SUCCESS);
-        final MockFlowFile ff0 = flowFiles.get(0);
+        final MockFlowFile ff0 = flowFiles.getFirst();
         assertOutFlowFileAttributes(ff0);
         verify(mockBoxFile).download(any(OutputStream.class));
         assertProvenanceEvent(ProvenanceEventType.FETCH);
     }
 
     @Test
-    void testFileDownloadFailure()  {
+    void testFileDownloadFailure() {
         testRunner.setProperty(FetchBoxFile.FILE_ID, TEST_FILE_ID);
 
         doThrow(new RuntimeException("Download failed")).when(mockBoxFile).download(any(OutputStream.class));
@@ -116,11 +116,11 @@ public class FetchBoxFileTest extends AbstractBoxFileTest {
 
         testRunner.assertAllFlowFilesTransferred(FetchBoxFile.REL_FAILURE, 1);
         final List<MockFlowFile> flowFiles = testRunner.getFlowFilesForRelationship(FetchBoxFile.REL_FAILURE);
-        final MockFlowFile ff0 = flowFiles.get(0);
+        final MockFlowFile ff0 = flowFiles.getFirst();
         ff0.assertAttributeEquals(BoxFileAttributes.ERROR_MESSAGE, "Download failed");
         assertNoProvenanceEvent();
     }
-    
+
     @Test
     void testMigration() {
         final Map<String, String> expected = Map.ofEntries(
